--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ htmlcov/
 .coverage.*
 .cache
 nosetests.xml
+npm-debug.log*
+node_modules/
 coverage.xml
 *.cover
 *.py.cover
@@ -205,3 +207,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+ui/
+app/static/uploads/
