--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "build": "npm run build:assets && npm run build:css"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.19",
-    "@fullcalendar/daygrid": "^6.1.19",
-    "@fullcalendar/interaction": "^6.1.19",
-    "@fullcalendar/list": "^6.1.19",
-    "@fullcalendar/timegrid": "^6.1.19"
+    "@schedule-x/calendar": "^4.1.0",
+    "@schedule-x/calendar-controls": "^4.1.0",
+    "@schedule-x/events-service": "^4.1.0",
+    "@schedule-x/scroll-controller": "^4.1.0",
+    "@schedule-x/theme-default": "^4.1.0",
+    "temporal-polyfill": "^0.3.0"
   }
 }
