--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
 APScheduler==3.10.4
 Authlib==1.3.1
 Flask==3.1.2
-Flask_Login==0.6.3
-flask_sqlalchemy==3.1.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
 itsdangerous==2.2.0
 python-dotenv==1.2.1
-Requests==2.32.5
+requests==2.32.5
 SQLAlchemy==2.0.32
 Werkzeug==3.1.5
 gunicorn
+psycopg2-binary==2.9.9
